# pwnv

./: .gitignore  README.md  port.py  pwnv.py  pyproject.toml  todo.txt
lol/: solve.py
pwnv/: __init__.py
pwnv/cli/: __init__.py  challenge.py  ctf.py  init.py  list.py  reset.py  solve.py  utils.py
pwnv/cli/utils/: __init__.py  config.py  crud.py  remote.py  ui.py
pwnv/core/: plugin_manager.py
pwnv/models/: challenge.py  ctf.py  init.py
pwnv/plugins/: __init__.py  plugin.py  pwn.py
pwnv/setup/: __init__.py  core.py
pwnv/templates/: pwn_template.py
pwnv/utils/: __init__.py  config.py  crud.py  plugin.py  remote.py
tests/: test_crud.py  test_plugin.py
