[project]
name = "pwnv"
version = "0.2.0"
description = "CLI tool for CTF management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctfbridge>=0.1.4",
    "inquirerpy>=0.3.4",
    "pydantic>=2.10.3",
    "typer>=0.15.1",
    # "uv>=0.5.9",
]

[project.scripts]
pwnv = "pwnv:main"

[tool.uv.workspace]
members = ["CTF"]
